# Rust-Rocket-LOGASS-API-Service

./: Cargo.toml  README.md  client.cs  client.go  client.py  client.rs  log.db  request.http
src/: main.rs  sqlite.rs
