[package]
name = "rust_logass_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.59"
rusqlite = { version = "0.24.1", features = ["bundled"] }
chrono = "0.4"